--- a/src/styles/layouts/projects.scss
+++ b/src/styles/layouts/projects.scss
@@ -1,6 +1,7 @@
 .projects {
     padding: 0.3rem;
     text-align: center;
+    height: 50vh;
 
     &__title {
         font-size: 1.8rem;
@@ -8,8 +9,8 @@
     }
 
     &__container {
-        overflow-y: auto;
-        height: 100vh;
+        overflow-y: scroll;
+        height: 100%;
     }
 
 }
